[package]
name = "aspen-cluster"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cluster coordination, bootstrap, and peer discovery for Aspen"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { workspace = true }
aspen-ticket = { workspace = true }
aspen-auth = { workspace = true }
aspen-raft = { workspace = true }
aspen-raft-types = { workspace = true }
aspen-transport = { workspace = true }
aspen-sharding = { workspace = true }
aspen-coordination = { workspace = true }
aspen-hooks-types = { workspace = true }  # Lightweight types for HooksConfig (always available)

# Optional feature-gated dependencies
aspen-blob = { workspace = true, optional = true }
aspen-docs = { workspace = true, optional = true }
aspen-jobs = { workspace = true, optional = true }
aspen-hooks = { workspace = true, optional = true }
aspen-nickel = { workspace = true, optional = true }
aspen-secrets = { workspace = true, optional = true }

# Networking and P2P
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-base = "0.95.1"
iroh-blobs = "0.97"
iroh-gossip = "0.95"
iroh-docs = "0.95"
iroh-tickets = "0.2"
irpc = { workspace = true }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3.31"
async-trait = "0.1"

# Storage
redb = "2.0.0"

# Error handling
anyhow = "1.0"
snafu = "0.8.9"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { workspace = true }
bincode = "1.3"
postcard = { workspace = true }

# Utilities
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
blake3 = "1.5"
base64 = "0.22"
url = "2"
tracing = "0.1"
parking_lot = "0.12"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
num_cpus = "1.16"

# Raft consensus
openraft = { path = "../../openraft/openraft", features = ["serde", "type-alias"] }

# Global content discovery (optional)
mainline = { version = "6.0", optional = true, default-features = false, features = ["async"] }

[dev-dependencies]
tempfile = "3.4.0"
proptest = "1.0"

[features]
default = []
global-discovery = ["dep:mainline"]
secrets = ["dep:aspen-secrets"]
bolero = []  # Bolero feature flag for cfg checks

# Optional dependencies for reducing minimal compile times
blob = ["dep:aspen-blob"]
docs = ["dep:aspen-docs"]
jobs = ["dep:aspen-jobs"]
hooks = ["dep:aspen-hooks", "jobs"]  # hooks requires jobs for HookJobWorker
nickel = ["dep:aspen-nickel"]  # Nickel config language support
