[package]
name = "aspen-cluster"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cluster coordination, bootstrap, and peer discovery for Aspen"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { path = "../aspen-core" }
aspen-disk = { path = "../aspen-disk" }
aspen-ticket = { path = "../aspen-ticket" }
aspen-auth = { path = "../aspen-auth" }
aspen-raft = { path = "../aspen-raft" }
aspen-raft-types = { path = "../aspen-raft-types" }
aspen-proxy = { path = "../aspen-proxy", optional = true }
aspen-transport = { path = "../aspen-transport" }
aspen-sharding = { path = "../aspen-sharding" }
aspen-coordination = { path = "../aspen-coordination" }
aspen-hooks-types = { path = "../aspen-hooks-types" }

aspen-dht-discovery = { path = "../aspen-dht-discovery" }

# Optional feature-gated dependencies
aspen-blob = { path = "../../../aspen-blob/crates/aspen-blob", optional = true }
aspen-docs = { path = "../../../aspen-docs/crates/aspen-docs", optional = true }
aspen-federation = { path = "../../../aspen-federation/crates/aspen-federation", optional = true }
aspen-jobs = { path = "../../../aspen-jobs/crates/aspen-jobs", optional = true }
aspen-jobs-worker-maintenance = { path = "../../../aspen-jobs/crates/aspen-jobs-worker-maintenance", optional = true }
aspen-hooks = { path = "../../../aspen-hooks/crates/aspen-hooks", optional = true }
aspen-cluster-bridges = { path = "../../../aspen-cluster-bridges/crates/aspen-cluster-bridges", optional = true }
aspen-nickel = { path = "../../../aspen-ci/crates/aspen-nickel", optional = true }
aspen-secrets = { path = "../../../aspen-secrets/crates/aspen-secrets", optional = true }

# Networking and P2P
iroh = { version = "0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-base = "0.95.1"
iroh-blobs = { version = "0.97", optional = true }
iroh-gossip = "0.95"
iroh-docs = { version = "0.95", optional = true }
iroh-tickets = "0.2"
irpc = { version = "0.11.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net", "fs"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
n0-future = "0.3.2"
async-trait = "0.1"

# Storage
redb = "2.0.0"

# Error handling
anyhow = "1.0"
snafu = "0.8.9"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Utilities
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
blake3 = "1.5"
base64 = "0.22"
url = "2"
tracing = "0.1"
parking_lot = "0.12"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
num_cpus = "1.16"

# Raft consensus
openraft = { path = "../../openraft/openraft", features = ["serde", "type-alias"] }

# Global content discovery (optional)
mainline = { version = "6.0", optional = true, default-features = false, features = ["async"] }

[dev-dependencies]
aspen-testing = { path = "../aspen-testing" }
tempfile = "3.4.0"
proptest = "1.0"

[features]
default = []
global-discovery = ["dep:mainline", "aspen-federation?/global-discovery", "aspen-dht-discovery/global-discovery"]
secrets = ["dep:aspen-secrets"]
bolero = []

# Optional dependencies for reducing minimal compile times
blob = ["dep:aspen-blob", "dep:iroh-blobs", "aspen-jobs?/blob", "aspen-cluster-bridges?/blob"]
docs = ["dep:aspen-docs", "dep:iroh-docs", "aspen-cluster-bridges?/docs"]
federation = ["dep:aspen-federation"]
jobs = ["dep:aspen-jobs", "dep:aspen-jobs-worker-maintenance"]
hooks = ["dep:aspen-hooks", "dep:aspen-cluster-bridges", "aspen-cluster-bridges?/hooks", "jobs"]
nickel = ["dep:aspen-nickel"]
proxy = ["dep:aspen-proxy"]
