[package]
name = "aspen-cluster"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Cluster coordination, bootstrap, and peer discovery for Aspen"
authors = ["Aspen Contributors"]

[dependencies]
# Core Aspen dependencies
aspen-core = { path = "../aspen-core" }
aspen-crypto = { path = "../aspen-crypto" }
aspen-disk = { path = "../aspen-disk" }
aspen-ticket = { path = "../aspen-ticket" }
aspen-auth = { path = "../aspen-auth" }
aspen-raft = { path = "../aspen-raft" }
aspen-raft-types = { path = "../aspen-raft-types" }
aspen-proxy = { path = "../aspen-proxy", optional = true }
aspen-transport = { path = "../aspen-transport" }
aspen-dag = { path = "../aspen-dag" }
aspen-sharding = { path = "../aspen-sharding" }
aspen-coordination = { path = "../aspen-coordination" }
aspen-hooks-types = { path = "../aspen-hooks-types" }

aspen-dht-discovery = { path = "../aspen-dht-discovery" }

# Optional feature-gated dependencies
aspen-blob = { path = "../aspen-blob", optional = true }
aspen-docs = { path = "../aspen-docs", optional = true }
aspen-federation = { path = "../aspen-federation", optional = true }
aspen-jobs = { path = "../aspen-jobs", optional = true }
aspen-jobs-worker-maintenance = { path = "../aspen-jobs-worker-maintenance", optional = true }
aspen-hooks = { path = "../aspen-hooks", optional = true }
aspen-cluster-bridges = { path = "../aspen-cluster-bridges", optional = true }
aspen-nickel = { path = "../aspen-nickel", optional = true }
aspen-secrets = { path = "../aspen-secrets", optional = true }
aspen-castore = { path = "../aspen-castore", optional = true }
aspen-deploy = { path = "../aspen-deploy", optional = true }
aspen-nostr-relay = { path = "../aspen-nostr-relay", optional = true }
aspen-constants = { path = "../aspen-constants" }

# Networking and P2P
iroh = { version = "0.97.0", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-base = "0.97.0"
iroh-blobs = { version = "0.99.0", optional = true }
iroh-gossip = "0.97.0"
iroh-docs = { version = "0.97.0", optional = true }
iroh-relay = { version = "0.97.0", features = ["server"], optional = true }
iroh-metrics = "0.38"
iroh-tickets = "0.4.0"
irpc = { version = "0.13.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "net", "fs"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
n0-error = "0.1.3"
n0-future = "0.3.2"
async-trait = "0.1"

# Storage
redb = "2.0.0"

# Error handling
anyhow = "1.0"
snafu = "0.8.9"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Utilities
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
blake3 = "1.5"
base64 = "0.22"
url = "2"
tracing = "0.1"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-exporter-opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
parking_lot = "0.12"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
num_cpus = "1.16"

# Raft consensus
openraft = { path = "../../openraft/openraft", features = ["serde", "type-alias"] }

# Unix process control (for execve restart)
nix = { version = "0.29", optional = true, features = ["process"] }

# Global content discovery (optional)
mainline = { version = "6.0", optional = true, default-features = false, features = ["async"] }

[dev-dependencies]
aspen-testing = { path = "../aspen-testing" }
tempfile = "3.4.0"
proptest = "1.0"

[features]
default = []
global-discovery = ["dep:mainline", "aspen-federation?/global-discovery", "aspen-dht-discovery/global-discovery"]
secrets = ["dep:aspen-secrets"]
bolero = []

# Optional dependencies for reducing minimal compile times
blob = ["dep:aspen-blob", "dep:iroh-blobs", "aspen-jobs?/blob", "aspen-cluster-bridges?/blob"]
docs = ["dep:aspen-docs", "dep:iroh-docs", "aspen-cluster-bridges?/docs"]
federation = ["dep:aspen-federation"]
jobs = ["dep:aspen-jobs", "dep:aspen-jobs-worker-maintenance"]
hooks = ["dep:aspen-hooks", "dep:aspen-cluster-bridges", "aspen-cluster-bridges?/hooks", "jobs"]
nickel = ["dep:aspen-nickel"]
proxy = ["dep:aspen-proxy"]
relay-server = ["dep:iroh-relay"]
snix = ["dep:aspen-castore", "blob"]
deploy = ["dep:aspen-deploy", "dep:nix"]
nostr-relay = ["dep:aspen-nostr-relay"]
trust = ["aspen-raft/trust"]
otlp = ["dep:metrics-exporter-opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:opentelemetry"]
